--- a/example/android/app/src/main/res/values/styles.xml
+++ b/example/android/app/src/main/res/values/styles.xml
@@ -1,9 +1,18 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
-    </style>
+  <!-- Base application theme. -->
+  <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <!-- Customize your theme here. -->
+    <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
+  </style>
+
+  <style name="Widget.AppTheme.ActionBar.Fullscreen" parent="Widget.AppCompat.ActionBar">
+    <item name="android:background">@color/black_overlay</item>
+  </style>
+
+  <style name="Widget.AppTheme.ButtonBar.Fullscreen" parent="">
+    <item name="android:background">@color/black_overlay</item>
+    <item name="android:buttonBarStyle">?android:attr/buttonBarStyle</item>
+  </style>
 
 </resources>
