--- a/example/android/app/src/main/res/layout/activity_fullscreen.xml
+++ b/example/android/app/src/main/res/layout/activity_fullscreen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
@@ -7,45 +7,37 @@
   android:theme="@style/ThemeOverlay.RNLlamaExample.FullscreenContainer"
   tools:context=".FullscreenActivity">
 
-  <!-- The primary full-screen view. This can be replaced with whatever view
-         is needed to present your content, e.g. VideoView, SurfaceView,
-         TextureView, etc. -->
-  <TextView
-    android:id="@+id/fullscreen_content"
+  <LinearLayout
+    android:layout_alignParentBottom="true"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:keepScreenOn="true"
-    android:text="@string/dummy_content"
-    android:textColor="?attr/fullscreenTextColor"
-    android:textSize="50sp"
-    android:textStyle="bold" />
+    android:layout_height="wrap_content"
+    android:background="#ccc"
+    android:alpha="05">
+    <TextView
+      android:id="@+id/tvResponse"
 
-  <!-- This FrameLayout insets its children based on system windows using
-         android:fitsSystemWindows. -->
-  <FrameLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
-
-    <LinearLayout
-      android:id="@+id/fullscreen_content_controls"
-      style="@style/Widget.AppTheme.ButtonBar.Fullscreen"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_gravity="bottom|center_horizontal"
+      android:layout_height="wrap_content">
+    </TextView>
+    <LinearLayout
       android:orientation="horizontal"
-      tools:ignore="UselessParent">
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+      <EditText
+        android:id="@+id/etInput"
+        android:layout_weight="0.8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
+      </EditText>
       <Button
-        android:id="@+id/dummy_button"
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/dummy_button" />
-
+        android:id="@+id/btnSubmit"
+        android:text="Send"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+      </Button>
     </LinearLayout>
-  </FrameLayout>
+  </LinearLayout>
 
-</FrameLayout>
+</RelativeLayout>
