--- a/example/android/app/src/main/res/values/styles.xml
+++ b/example/android/app/src/main/res/values/styles.xml
@@ -4,15 +4,18 @@
   <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
     <!-- Customize your theme here. -->
     <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
+    <item name="android:windowIsTranslucent">true</item>
   </style>
 
   <style name="Widget.AppTheme.ActionBar.Fullscreen" parent="Widget.AppCompat.ActionBar">
-    <item name="android:background">@color/black_overlay</item>
+<!--    <item name="android:background">@color/black_overlay</item>-->
+    <item name="android:windowIsTranslucent">true</item>
   </style>
 
   <style name="Widget.AppTheme.ButtonBar.Fullscreen" parent="">
-    <item name="android:background">@color/black_overlay</item>
-    <item name="android:buttonBarStyle">?android:attr/buttonBarStyle</item>
+    <item name="android:windowIsTranslucent">true</item>
+<!--    <item name="android:background">@color/black_overlay</item>-->
+<!--    <item name="android:buttonBarStyle">?android:attr/buttonBarStyle</item>-->
   </style>
 
 </resources>
