--- a/example/android/app/src/main/res/layout/activity_fullscreen.xml
+++ b/example/android/app/src/main/res/layout/activity_fullscreen.xml
@@ -3,23 +3,19 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:background="@drawable/back1"
   tools:context=".FullscreenActivity"
   >
 
   <ImageView
-    android:visibility="gone"
+    android:visibility="visible"
     android:id="@+id/ivBackground"
     android:src="@drawable/back1"
     android:scaleType="fitXY"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
   </ImageView>
 
-
   <FrameLayout
-    android:layout_weight="0.7"
     android:id="@+id/AvatarLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -38,9 +34,12 @@
     android:alpha="0.5">
     <TextView
       android:id="@+id/tvResponse"
-
       android:layout_width="match_parent"
-      android:layout_height="80dp">
+      android:layout_height="100dp"
+      android:scrollbars = "vertical"
+      android:textSize="10sp"
+      android:padding="5dp"
+      >
     </TextView>
     <LinearLayout
       android:orientation="horizontal"
@@ -53,17 +52,29 @@
         android:layout_height="wrap_content">
 
       </EditText>
-      <Button
+      <ImageButton
         android:id="@+id/btnSubmit"
-        android:text="Send"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-      </Button>
+        android:src="@drawable/baseline_send_24"
+        android:background="#00000000"
+        android:layout_width="44dp"
+        android:layout_height="44dp">
+      </ImageButton>
+      <ImageButton
+        android:id="@+id/btnStop"
+        android:background="#00000000"
+        android:src="@drawable/baseline_cancel_24"
+        android:visibility="gone"
+        android:layout_width="44dp"
+        android:layout_height="44dp">
+
+      </ImageButton>
     </LinearLayout>
   </LinearLayout>
 
   <ImageButton
-    android:src="@drawable/baseline_send_24"
+    android:id="@+id/btnMore"
+    android:background="#00000000"
+    android:src="@drawable/baseline_more_horiz_24"
     android:layout_alignParentRight="true"
     android:layout_width="50dp"
     android:layout_height="50dp">
