--- a/example/android/app/src/main/res/layout/activity_fullscreen.xml
+++ b/example/android/app/src/main/res/layout/activity_fullscreen.xml
@@ -30,14 +30,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#ccc"
-    android:alpha="0.5">
+    android:background="#8ccc">
     <TextView
       android:id="@+id/tvResponse"
       android:layout_width="match_parent"
-      android:layout_height="100dp"
+      android:layout_height="80dp"
       android:scrollbars = "vertical"
-      android:textSize="10sp"
+      android:textSize="14sp"
       android:padding="5dp"
       >
     </TextView>
