--- a/example/android/app/src/main/res/layout/activity_fullscreen.xml
+++ b/example/android/app/src/main/res/layout/activity_fullscreen.xml
@@ -48,6 +48,7 @@
         android:id="@+id/etInput"
         android:layout_weight="0.8"
         android:layout_width="wrap_content"
+        android:singleLine="true"
         android:layout_height="wrap_content">
 
       </EditText>
