--- a/example/android/app/src/main/res/layout/activity_fullscreen.xml
+++ b/example/android/app/src/main/res/layout/activity_fullscreen.xml
@@ -52,6 +52,13 @@
         android:layout_height="wrap_content">
 
       </EditText>
+      <ProgressBar
+        android:id="@+id/pbLoading"
+        android:visibility="gone"
+        android:layout_width="44dp"
+        android:layout_height="44dp">
+
+      </ProgressBar>
       <ImageButton
         android:id="@+id/btnSubmit"
         android:src="@drawable/baseline_send_24"
@@ -59,6 +66,7 @@
         android:layout_width="44dp"
         android:layout_height="44dp">
       </ImageButton>
+
       <ImageButton
         android:id="@+id/btnStop"
         android:background="#00000000"
