--- a/example/android/app/src/main/res/layout/activity_fullscreen.xml
+++ b/example/android/app/src/main/res/layout/activity_fullscreen.xml
@@ -39,7 +39,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#8ccc">
+    android:background="#BFFF">
     <TextView
       android:id="@+id/tvResponse"
       android:layout_width="match_parent"
