--- a/example/android/app/src/main/res/layout/activity_fullscreen.xml
+++ b/example/android/app/src/main/res/layout/activity_fullscreen.xml
@@ -34,41 +34,7 @@
     android:layout_above="@id/llResponse"
     android:layout_alignParentRight="true">
   </Button>
-  <com.google.android.material.button.MaterialButtonToggleGroup
-    android:id="@+id/toggle_button_group"
-    android:gravity="center_horizontal"
-    app:singleSelection = "true"
-    app:selectionRequired="true"
-    android:orientation="horizontal"
-    android:padding="4dp"
-    app:checkedButton="@+id/button1"
-    android:layout_above="@id/llResponse"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <com.google.android.material.button.MaterialButton
-      style="?attr/materialButtonOutlinedStyle"
-      android:id="@+id/button1"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="Button 1"
-      />
-    <com.google.android.material.button.MaterialButton
-      style="?attr/materialButtonOutlinedStyle"
-      android:id="@+id/button2"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:gravity="center"
-      android:text="Button 2"
-      />
-    <com.google.android.material.button.MaterialButton
-      style="?attr/materialButtonOutlinedStyle"
-      android:id="@+id/button3"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="Button 3"
-      />
 
-  </com.google.android.material.button.MaterialButtonToggleGroup>
   <LinearLayout
     android:id="@+id/llResponse"
     android:layout_alignParentBottom="true"
@@ -76,6 +42,56 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#BFFF">
+    <com.google.android.material.button.MaterialButtonToggleGroup
+      android:id="@+id/mbtgLang"
+      android:gravity="center_horizontal"
+      app:singleSelection="true"
+      app:selectionRequired="true"
+      android:orientation="horizontal"
+      app:checkedButton="@+id/btnLang0"
+      android:layout_above="@id/llResponse"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content">
+
+      <com.google.android.material.button.MaterialButton
+        style="?attr/materialButtonOutlinedStyle"
+        android:id="@+id/btnLang0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="EN"
+        />
+      <com.google.android.material.button.MaterialButton
+        style="?attr/materialButtonOutlinedStyle"
+        android:id="@+id/btnLang1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CH"
+        />
+      <com.google.android.material.button.MaterialButton
+        style="?attr/materialButtonOutlinedStyle"
+        android:id="@+id/btnLang2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="FR"
+        />
+      <com.google.android.material.button.MaterialButton
+        style="?attr/materialButtonOutlinedStyle"
+        android:id="@+id/btnLang3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="GE"
+        />
+
+      <com.google.android.material.button.MaterialButton
+        style="?attr/materialButtonOutlinedStyle"
+        android:id="@+id/btnLangMore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="..."
+        />
+
+    </com.google.android.material.button.MaterialButtonToggleGroup>
     <TextView
       android:id="@+id/tvResponse"
       android:layout_width="match_parent"
