--- a/example/android/app/src/main/res/layout/activity_fullscreen.xml
+++ b/example/android/app/src/main/res/layout/activity_fullscreen.xml
@@ -27,13 +27,30 @@
 
 
   <Button
-    android:text="RAG"
-    android:id="@+id/btnRag"
-    android:layout_width="60dp"
-    android:layout_height="60dp"
+    android:text="New Session"
+    android:id="@+id/btnNewSession"
+    android:layout_above="@id/llResponse"
+    android:layout_alignParentLeft="true"
+    android:layout_width="wrap_content"
+    android:layout_height="40dp">
+  </Button>
+  <LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+
     android:layout_above="@id/llResponse"
     android:layout_alignParentRight="true">
-  </Button>
+
+    <Button
+      android:text="Menu"
+      android:layout_marginLeft="2dp"
+      android:id="@+id/btnChatControl"
+      android:layout_width="wrap_content"
+      android:layout_height="40dp">
+    </Button>
+
+  </LinearLayout>
+
 
   <LinearLayout
     android:id="@+id/llResponse"
