--- a/example/android/app/src/main/res/layout/activity_vosk.xml
+++ b/example/android/app/src/main/res/layout/activity_vosk.xml
@@ -10,20 +10,64 @@
     android:layout_height="wrap_content">
 
   </TextView>
-  <Button
-    android:id="@+id/recognize_file"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="REC FILE"/>
 
-  <Button
-    android:id="@+id/recognize_mic"
+  <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="REC MIC"/>
+    android:layout_height="wrap_content">
+
+
+    <LinearLayout
+      android:orientation="vertical"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content">
+
+      <TextView
+        android:text="Input Lang"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content">
+
+      </TextView>
+      <Spinner
+        android:id="@+id/spInput"
+        android:entries="@array/InputLang"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+      </Spinner>
+    </LinearLayout>
+
+    <LinearLayout
+      android:orientation="vertical"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content">
+
+      <TextView
+        android:text="Output Lang"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content">
+
+      </TextView>
+      <Spinner
+        android:id="@+id/spOutput"
+        android:entries="@array/OutputLang"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+      </Spinner>
+    </LinearLayout>
+
+    <Button
+      android:id="@+id/recognize_mic"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="Start"/>
+
+  </LinearLayout>
+
 
   <ToggleButton
     android:id="@+id/pause"
+    android:visibility="gone"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textOff="PAUSE"
@@ -31,10 +75,21 @@
 
   <TextView
     android:id="@+id/result_text"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_weight="0.4"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:gravity="bottom"
     android:scrollbars="vertical"
+    android:textAppearance="?android:attr/textAppearanceMedium" />
+
+  <TextView
+    android:id="@+id/tvTranslate"
+    android:layout_weight="0.4"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="bottom"
+    android:scrollbars="vertical"
+    android:text="AAA\nBB\nCCC\nDDDDDFJFKJA:LJF:DJF\nDDD"
     android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </LinearLayout>
