Update concat translate

--- a/example/android/app/src/main/res/layout/activity_vosk.xml
+++ b/example/android/app/src/main/res/layout/activity_vosk.xml
@@ -102,7 +102,7 @@
     android:layout_height="match_parent"
     android:gravity="bottom"
     android:scrollbars="vertical"
-    android:text="AAA\nBB\nCCC\nDDDDDFJFKJA:LJF:DJF\nDDD"
+    android:text=""
     android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </LinearLayout>
