--- a/example/android/app/src/main/res/layout/activity_vosk.xml
+++ b/example/android/app/src/main/res/layout/activity_vosk.xml
@@ -78,6 +78,7 @@
   <ListView
     android:id="@+id/lvListView"
     android:layout_weight="0.8"
+    android:divider="@null"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
