--- a/example/android/app/src/main/res/layout/list_item.xml
+++ b/example/android/app/src/main/res/layout/list_item.xml
@@ -1,21 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:orientation="vertical"
-android:padding="8dp">
-
-<TextView
-  android:id="@+id/title"
-  android:layout_width="wrap_content"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
   android:layout_height="wrap_content"
-  android:textSize="18sp"
-  android:textStyle="bold" />
+  android:orientation="vertical">
 
-<TextView
-  android:id="@+id/subtitle"
-  android:layout_width="wrap_content"
-  android:layout_height="wrap_content"
-  android:textSize="14sp"
-  android:textColor="#666" />
-</LinearLayout>
+
+  <androidx.cardview.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardElevation="8dp"
+    app:cardCornerRadius="8dp"
+    android:layout_margin="10dp"
+    app:cardBackgroundColor="#FFF"
+    app:cardMaxElevation="2dp"
+    app:cardPreventCornerOverlap="true"
+    >
+
+    <LinearLayout
+      android:orientation="vertical"
+      android:layout_margin="1dp"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+      <TextView
+        android:id="@+id/title"
+        android:text="TITLE TITLE "
+        android:layout_marginHorizontal="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+      <TextView
+        android:id="@+id/subtitle"
+        android:layout_marginHorizontal="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:text="CONTENT AAAA"
+        android:textColor="#666" />
+    </LinearLayout>
+  </androidx.cardview.widget.CardView>
+
+</RelativeLayout>
