--- a/example/android/app/src/main/res/layout/activity_vosk.xml
+++ b/example/android/app/src/main/res/layout/activity_vosk.xml
@@ -3,66 +3,101 @@
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:orientation="vertical"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   android:padding="16dp">
-  <TextView
-    android:text="GenAI Live Translate"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
 
-  </TextView>
 
   <LinearLayout
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="50dp">
 
+    <ImageView
+      android:layout_width="140dp"
+      android:layout_height="match_parent"
+      android:src="@drawable/nexretail"></ImageView>
+
+    <TextView
+      android:text="Live Translate on Edge AI"
+      android:textSize="16sp"
+      android:gravity="center"
+      android:lines="2"
+      android:textStyle="bold"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
+
+    </TextView>
+
+  </LinearLayout>
+
+
+
+  <androidx.cardview.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="8dp"
+    android:layout_margin="8dp"
+
+    app:cardBackgroundColor="@color/light_blue_900"
+    >
 
     <LinearLayout
-      android:orientation="vertical"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content">
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:padding="4dp">
 
-      <TextView
-        android:text="Input Lang"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content">
 
-      </TextView>
-      <Spinner
-        android:id="@+id/spInput"
-        android:entries="@array/InputLang"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-      </Spinner>
-    </LinearLayout>
-
-    <LinearLayout
-      android:orientation="vertical"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content">
-
-      <TextView
-        android:text="Output Lang"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content">
-
-      </TextView>
-      <Spinner
-        android:id="@+id/spOutput"
-        android:entries="@array/OutputLang"
+      <LinearLayout
+        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-      </Spinner>
+        <TextView
+          android:text="Input Lang"
+          android:textColor="#fff"
+          android:layout_width="140dp"
+          android:layout_height="wrap_content">
+
+        </TextView>
+        <Spinner
+          android:id="@+id/spInput"
+          android:entries="@array/InputLang"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content">
+
+        </Spinner>
+      </LinearLayout>
+
+      <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+          android:text="Output Lang"
+          android:textColor="#fff"
+          android:layout_width="140dp"
+          android:layout_height="wrap_content">
+
+        </TextView>
+        <Spinner
+          android:id="@+id/spOutput"
+          android:entries="@array/OutputLang"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content">
+
+        </Spinner>
+      </LinearLayout>
+
+      <Button
+        android:id="@+id/recognize_mic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start"/>
+
     </LinearLayout>
+  </androidx.cardview.widget.CardView>
 
-    <Button
-      android:id="@+id/recognize_mic"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:text="Start"/>
-
-  </LinearLayout>
 
 
   <ToggleButton
@@ -77,7 +112,7 @@
 
   <ListView
     android:id="@+id/lvListView"
-    android:layout_weight="0.8"
+    android:layout_weight="0.7"
     android:divider="@null"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
