--- a/example/android/app/src/main/res/layout/activity_fullscreen.xml
+++ b/example/android/app/src/main/res/layout/activity_fullscreen.xml
@@ -9,7 +9,7 @@
   <ImageView
     android:visibility="visible"
     android:id="@+id/ivBackground"
-    android:src="@drawable/adlink"
+    android:src="@drawable/adlink916"
     android:scaleType="fitXY"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
